// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkTableBody should render correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody
      class=""
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableBody should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <table>
    <tbody
      class=""
      data-foo="bar"
      id="my-custom-id"
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableBody should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <tbody
      class="my-custom-class"
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableBody should render correctly with type="striped" 1`] = `
<DocumentFragment>
  <table>
    <tbody
      class="bpk-table__body--striped"
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;
